--- a/main_v2.tex
+++ b/main_v2.tex
@@ -49,7 +49,7 @@
 \email{pande@stanford.edu}
 
 %\title{Residual LSTM Embeddings for One-shot Learning in Drug Discovery}
-\title{FOOBAR Low Data Drug Discovery with One-shot Learning}
+\title{Low Data Drug Discovery with One-shot Learning}
 
 
 \begin{document}
@@ -57,7 +57,9 @@
 \maketitle
 
 \begin{abstract}
-Recent advances in machine learning have made significant contributions to drug discovery. Deep neural networks in particular have been demonstrated to provide significant boosts in predictive power when inferring the properties and activities of small-molecule compounds \cite{ma2015deep}. However, the applicability of these techniques has been limited by the requirement for large amounts of training data. In this work, we demonstrate how one-shot learning can be used to significantly lower the amounts of data required to make meaningful predictions in drug discovery applications. We introduce a new architecture, the residual LSTM embedding, that, when combined with graph convolutional neural networks, significantly improves the ability to learn meaningful distance metrics over small-molecules. We open source all models introduced in this work as part of DeepChem, an open-source framework for deep-learning in drug discovery \cite{ram2016}.
+Recent advances in machine learning have made significant contributions to drug discovery. Deep neural networks in particular have been demonstrated to provide significant boosts in predictive power when inferring the properties and activities of small-molecule compounds \cite{ma2015deep}. However, the applicability of these techniques has been limited by the requirement for large amounts of training data. In this work, we demonstrate how one-shot learning can be used to significantly lower the amounts of data required to make meaningful predictions in drug discovery applications. We introduce a new architecture, the residual LSTM embedding, that, when combined with graph convolutional neural networks, significantly improves the ability to learn meaningful distance metrics over small-molecules. We open source all models introduced in this work as part of DeepChem, an open-source framework for deep-learning in drug discovery
+TEST TEST TEST
+\cite{ram2016}.
 \end{abstract}
 
 \section{Introduction}
