--- a/main_v2.tex
+++ b/main_v2.tex
@@ -206,42 +206,23 @@ Results are in Table~\ref{tab:tox21}. All one-shot learning methods show strong 
     \centering
     \begin{tabular}{ |c|c|c|c|c|c| } 
     \hline
-    Tox21 & RF (50 trees) & RF (100 trees) & Siamese & AttnLSTM & IterRefLSTM \\ 
+    Tox21 & RF (100 trees) & Graph Conv & Siamese & AttnLSTM & IterRefLSTM \\ 
     \hline
-    10 pos, 10 neg & 0.537 & 0.563 & \textbf{0.831} & \textbf{0.834} & \textbf{0.840} \\
+    10+/10- & $0.586 \pm 0.056$ & $0.648 \pm 0.029$ & $0.820 \pm 0.003$ & $0.832 \pm 0.004$ & $0.\mathbf{848 \pm 0.003}$ \\
     \hline
-    5 pos, 10 neg & 0.537 & 0.579 & 0.790 & \textbf{0.820} & \textbf{0.837} \\ 
+    5+/10- & $0.573 \pm 0.060$ & $0.637 \pm 0.061$ & $0.823 \pm 0.004$ & $0.832 \pm 0.005$ & $\mathbf{0.843 \pm 0.003}$ \\ 
     \hline
-    1 pos, 10 neg & 0.537 & 0.584 & 0.710 & 0.687 & \textbf{0.757} \\ 
+    1+/10- & $0.551 \pm 0.067$ & $0.541 \pm 0.093$ & $0.726 \pm 0.173$ & $0.674 \pm 0.130$ & $\mathbf{0.800 \pm 0.046}$ \\ 
     \hline
-    1 pos, 5 neg & 0.571 & 0.572 & 0.689 & 0.595 & \textbf{0.815} \\ 
+    1+/5- & $0.559 \pm 0.063$ & $0.595 \pm 0.086$ & $0.687 \pm 0.210$ & $0.655 \pm 0.239$ & $\mathbf{0.808 \pm 0.012}$ \\ 
     \hline
-    1 pos, 1 neg & 0.536 & 0.542 & 0.668 & 0.652 & \textbf{0.784}\\ 
-    \hline
-    \end{tabular}
-    \caption{Accuracies of models on held-out tasks for Tox21. Numbers reported are median on test-tasks. Numbers for each task are averaged for 20 random choices of support sets.}
-    \label{tab:tox21}
-\end{table}
-\begin{table}[h]
-    \centering
-    \begin{tabular}{ |c|c|c|c|c|c| } 
-    \hline
-    Tox21 & RF (50 trees) & RF (100 trees) & Siamese & AttnLSTM & IterRefLSTM \\ 
-    \hline
-    10 pos, 10 neg & 0.537 & 0.563 & \textbf{0.831} & \textbf{0.834} & \textbf{0.840} \\
-    \hline
-    5 pos, 10 neg & 0.537 & 0.579 & 0.790 & \textbf{0.820} & \textbf{0.837} \\ 
-    \hline
-    1 pos, 10 neg & 0.537 & 0.584 & 0.710 & 0.687 & \textbf{0.757} \\ 
-    \hline
-    1 pos, 5 neg & 0.571 & 0.572 & 0.689 & 0.595 & \textbf{0.815} \\ 
-    \hline
-    1 pos, 1 neg & 0.536 & 0.542 & 0.668 & 0.652 & \textbf{0.784}\\ 
+    1+/1- & $0.535 \pm 0.056$ & $0.589 \pm 0.068$ & $0.657 \pm 0.222$ & $0.619 \pm 0.255$ & $\mathbf{0.826 \pm 0.011}$\\ 
     \hline
     \end{tabular}
-    \caption{Accuracies of models on held-out tasks for Tox21. Numbers reported are median on test-tasks. Numbers for each task are averaged for 20 random choices of support sets.}
+    \caption{Accuracies of models on held-out tasks for Tox21. Numbers reported are mean and standard deviation of median task amongst test-tasks. Each task is evaluated 20 times with different support set to compute mean and standard deviation. Model with highest mean in each row is highlighted.}
     \label{tab:tox21}
 \end{table}
+
 \subsection{SIDER}
 
 The SIDER dataset contains information on marketed medicines and their observed adverse reactions \cite{kuhn2015sider}. We originally tested on the original 5868 side effect categories, but due to lack of signal at this level of granularity we grouped the drug-SE pairs into 27 system organ classes according to MedDRA classifications \cite{meddra}. We treat the problem of predicting whether a given compound induces a side-effect as an individual task (for 27 tasks in total). For the low-data benchmark, all models were trained on the first 21 tasks and tested on the last 6. For details see appendix.
@@ -252,7 +233,7 @@ Results are in Table~\ref{tab:sider}. All one-shot learning methods show strong 
     \centering
     \begin{tabular}{ |c|c|c|c|c|c| } 
     \hline
-    SIDER & RF (50 trees) & RF (100 trees) & Siamese & AttnLSTM & IterRefLSTM \\ 
+    SIDER & Graph Convolution & RF (100 trees) & Siamese & AttnLSTM & IterRefLSTM \\ 
     \hline
     10 pos, 10 neg & 0.551 & 0.546 & 0.660 & 0.671 & \textbf{0.752} \\
     \hline
@@ -278,17 +259,17 @@ Results are in Table~\ref{tab:MUV}. The random forest baseline does significantl
     \centering
     \begin{tabular}{ |c|c|c|c|c|c| } 
     \hline
-    SIDER & RF (50 trees) & RF (100 trees) & Siamese & AttnLSTM & IterRefLSTM \\ 
+    MUV & RF (100 trees) & Graph Conv & Siamese & AttnLSTM & IterRefLSTM \\ 
     \hline
-    10 pos, 10 neg & 0.710 & \textbf{0.741} & 0.501 & 0.683 & \textbf{0.712} \\
+    10+/10- & $\mathbf{0.754 \pm 0.064}$ & $0.568 \pm 0.085$ & $0.601 \pm 0.041$ & $0.619 \pm 0.095$ & $0.693 \pm 0.028$ \\
     \hline
-    5 pos, 10 neg & 0\textbf{.723} & \textbf{.751} & 0.708 & 0.674 & 0.672 \\ 
+    5+/10- & $\mathbf{0.730 \pm 0.063}$ & $0.565 \pm 0.068$ & $0.655 \pm 0.166$ & $0.641 \pm 0.116$ & $0.682 \pm 0.023$ \\ 
     \hline
-    1 pos, 10 neg & 0.586 & \textbf{0.624} & 0.567 & 0.583 & \textbf{0.619} \\ 
+    1+/10- & $0.556 \pm 0.084$ & $0.569 \pm 0.061$ & $0.602 \pm 0.118$ & $0.572 \pm 0.185$ & $\mathbf{0.640 \pm 0.124}$ \\ 
     \hline
-    1 pos, 5 neg & 0.561 & 0.579 & 0.546 & 0.565 & \textbf{0.634} \\ 
+    1+/5- & $0.598 \pm 0.067$ & $0.554 \pm 0.089$ & $0.514 \pm 0.053$ & $0.553 \pm 0.193$ & $\mathbf{0.623 \pm 0.079}$ \\ 
     \hline
-    1 pos, 1 neg & 0.558 & 0.573 & 0.498 & 0.501 & 0.512 \\ 
+    1+/1- & $\mathbf{0.559 \pm 0.095}$ & $0.552 \pm 0.084$ & $0.500 \pm 0.0001$ & $0.505 \pm 0.036$ & $0.481 \pm 0.025$ \\ 
     \hline
     \end{tabular}
     \caption{Accuracies of models on held-out tasks for MUV. Numbers reported are median on test-tasks. Numbers for each task are averaged for 20 random choices of support sets}
@@ -305,7 +286,7 @@ Results are in Table~\ref{tab:transfer}. None of our models achieve any predicti
     \centering
     \begin{tabular}{ |c|c|c|c|c|c| } 
     \hline
-    SIDER from Tox21 & RF (50 trees) & RF (100 trees) & Siamese & AttnLSTM & IterRefLSTM \\ 
+    SIDER from Tox21 & Graph Convolution & RF (100 trees) & Siamese & AttnLSTM & IterRefLSTM \\ 
     \hline
     10 pos, 10 neg & .551 & .546 & 0.504 & 0.510 & .509 \\
     \hline
@@ -375,14 +356,266 @@ For the convolutional models, all molecules were featurized into graphs by consi
 
 \subsection{Tox21 Details}
 
+\subsubsection{Assay Details}
 The assays NR-AR, NR-AR-LBD, NR-AhR, NR-Aromatase, NR-ER, NR-ER-LBD, NR-PPAR-gamma, SR-ARE, SR-ATAD5 were used for training. Assays SR-HSE, SR-MMP, and SR-p53 were used for model evaluation.
 
+\subsubsection{Per-Assay Results}
+Results for each held-out assay are reported in Tables~\ref{tab:tox21-sr-hse},~\ref{tab:tox21-sr-mmp},~\ref{tab:tox21-sr-p53}.
+\begin{table}[h]
+    \centering
+    \begin{tabular}{ |c|c|c|c|c|c| } 
+    \hline
+    SR-HSE & RF (100 trees) & Graph Conv & Siamese & AttnLSTM & IterRefLSTM \\ 
+    \hline
+    10+/10- & $0.532 \pm 0.033$& $0.540 \pm 0.025$ & $0.767 \pm 0.005$ & $\mathbf{0.772 \pm 0.004}$ & $\mathbf{0.772 \pm 0.003}$ \\
+    \hline
+    5+/10- & $0.521 \pm 0.037$ & $0.546 \pm 0.023$ & $0.733 \pm 0.098$ & $0.767 \pm 0.006$ & $\mathbf{0.780 \pm 0.003}$ \\ 
+    \hline
+    1+/10- & $0.525 \pm 0.033$ & $0.531 \pm 0.035$ & $0.647 \pm 0.202$ & $0.674 \pm 0.130$ & $\mathbf{0.735 \pm 0.092}$ \\ 
+    \hline
+    1+/5- & $0.510 \pm 0.041$ & $0.537 \pm 0.043$ & $0.680 \pm 0.167$ & $0.578 \pm 0.183$ & $\mathbf{0.721 \pm 0.053}$ \\ 
+    \hline
+    1+/1- & $0.507 \pm 0.039$ & $0.526 \pm 0.0378$ & $0.613 \pm 0.187$ & $0.586 \pm 0.174$ & $\mathbf{0.746 \pm 0.096}$\\ 
+    \hline
+    \end{tabular}
+    \caption{Accuracies of models on Tox21 assay SR-HSE. Numbers reported are means ans standard deviations. Each model is evaluated 20 times with different support sets to compute means and standard deviations. Model with highest mean in each row is highlighted.}
+    \label{tab:tox21-sr-hse}
+\end{table}
+\begin{table}[h]
+    \centering
+    \begin{tabular}{ |c|c|c|c|c|c| } 
+    \hline
+    SR-MMP & RF (100 trees) & Graph Conv & Siamese & AttnLSTM & IterRefLSTM \\ 
+    \hline
+    10+/10- & $0.629 \pm 0.058$ & $0.648 \pm 0.029$ & $0.825 \pm 0.006$ & $0.838 \pm 0.003$ & $\mathbf{0.848 \pm 0.003}$ \\
+    \hline
+    5+/10- & $0.634 \pm 0.079$ & $0.637 \pm 0.061$ & $0.846 \pm 0.028$ & $0.846 \pm 0.003$ & $\mathbf{0.848 \pm 0.003}$ \\ 
+    \hline
+    1+/10- & $0.587 \pm 0.068$ & $0.541 \pm 0.093$ & $0.809 \pm 0.0204$ & $0.716 \pm 0.183$ & $\mathbf{0.800 \pm 0.046}$ \\ 
+    \hline
+    1+/5- & $0.597 \pm 0.097$ & $0.595 \pm 0.086$ & $0.687 \pm 0.210$ & $0.655 \pm 0.239$ & $\mathbf{0.808 \pm 0.012}$ \\ 
+    \hline
+    1+/1- & $0.560 \pm 0.0844$ & $0.589 \pm 0.068$ & $0.657 \pm 0.222$ & $0.622 \pm 0.213$ & $\mathbf{0.833 \pm 0.004}$\\ 
+    \hline
+    \end{tabular}
+    \caption{Accuracies of models on Tox21 assay SR-MMP. Numbers reported are means ans standard deviations. Each model is evaluated 20 times with different support sets to compute means and standard deviations. Model with highest mean in each row is highlighted.}
+    \label{tab:tox21-sr-mmp}
+\end{table}
+\begin{table}[h]
+    \centering
+    \begin{tabular}{ |c|c|c|c|c|c| } 
+    \hline
+    SR-p53 & RF (100 trees) & Graph Conv & Siamese & AttnLSTM & IterRefLSTM \\ 
+    \hline
+    10+/10- & $0.586 \pm 0.056$ & $0.653 \pm 0.021$ & $0.820 \pm 0.003$ & $0.832 \pm 0.004$ & $\mathbf{0.849 \pm 0.002}$ \\
+    \hline
+    5+/10- & $0.573 \pm 0.0604$ & $0.639 \pm 0.042$ & $0.823 \pm 0.004$ & $0.832 \pm 0.005$ & $\mathbf{0.843 \pm 0.003}$ \\ 
+    \hline
+    1+/10- & $0.551 \pm 0.067$ & $0.597 \pm 0.083$ & $0.726 \pm 0.173$ & $0.664 \pm 0.216$ & $\mathbf{0.814 \pm 0.023}$ \\ 
+    \hline
+    1+/5- & $0.559 \pm 0.063$ & $0.595 \pm 0.073$ & $0.745 \pm 0.156$ & $0.733 \pm 0.162$ & $\mathbf{0.812 \pm 0.014}$ \\ 
+    \hline
+    1+/1- & $0.535 \pm 0.056$ & $0.591 \pm 0.084$ & $0.680 \pm 0.197$ & $0.619 \pm 0.255$ & $\mathbf{0.826 \pm 0.011}$\\ 
+    \hline
+    \end{tabular}
+    \caption{Accuracies of models on Tox21 assay SR-p53. Numbers reported are means ans standard deviations. Each model is evaluated 20 times with different support sets to compute means and standard deviations. Model with highest mean in each row is highlighted.}
+    \label{tab:tox21-sr-p53}
+\end{table}
+
 \subsection{SIDER Details}
+\subsubsection{Assay Details}
 Indications "Hepatobiliary disorders", "Metabolism and nutrition disorders", "Product issues", "Eye disorders", "Investigations,Musculoskeletal and connective tissue disorders", "Gastrointestinal disorders", "Social circumstances", "Immune system disorders", "Reproductive system and breast disorders", "Neoplasms benign, malignant and unspecified (incl cysts and polyps)", "General disorders and administration site conditions", "Endocrine disorders", "Surgical and medical procedures", "Vascular disorders", "Blood and lymphatic system disorders", "Skin and subcutaneous tissue disorders", "Congenital, familial and genetic disorders", "Infections and infestations","Respiratory, thoracic and mediastinal disorders", "Psychiatric disorders" were used for training. Indications "Renal and urinary disorders", "Pregnancy, puerperium and perinatal conditions", "Ear and labyrinth disorders", "Cardiac disorders", "Nervous system disorders", "Injury, poisoning and procedural complications" were used for model evaluation.
 
-\subsection{MUV Details}
-Assays MUV-466, MUV-548, MUV-600, MUV-644, MUV-652, MUV-689, MUV-692, MUV-712, MUV-713, MUV-733, MUV-737, MUV-810 were used for training. Assays MUV-832, MUV-846, MUV-852,  MUV-858, MUV-859 were used for model evaluation.
+\subsubsection{Per-Assay Results}
+Results for each held-out assay in SIDER collection are reported in Tables 
+\begin{table}[h]
+    \centering
+    \begin{tabular}{ |c|c|c|c|c|c| } 
+    \hline
+    R.U.D & RF (100 trees) & Graph Conv & Siamese & AttnLSTM & IterRefLSTM \\ 
+    \hline
+    10+/10- & $0.564 \pm 0.031$ & $0.496 \pm 0.035$ & $0.729 \pm 0.049$ & $0.687 \pm 0.091$ & $\mathbf{0.779 \pm 0.003}$ \\
+    \hline
+    5+/10- & $0.564 \pm 0.022$ & $0.477 \pm 0.031$ & $0.670 \pm 0.119$ & $0.645 \pm 0.122$ & $\mathbf{0.772 \pm 0.002}$ \\ 
+    \hline
+    1+/10- & $0.540 \pm 0.034$ & $0.449 \pm 0.025$ & $0.578 \pm 0.047$ & $\mathbf{0.585 \pm 0.066}$ & $\mathbf{0.585 \pm 0.014}$ \\ 
+    \hline
+    1+/5- & $0.538 \pm 0.045$ & $0.457 \pm 0.029$ & $0.518 \pm 0.060$ & $0.520 \pm 0.056$ & $\mathbf{0.629 \pm 0.019}$ \\ 
+    \hline
+    1+/1- & $0.508 \pm 0.046$ & $0.468 \pm 0.045$ & $0.503 \pm 0.063$ & $0.508 \pm 0.0763$ & $\mathbf{0.635 \pm 0.118}$\\ 
+    \hline
+    \end{tabular}
+    \caption{Accuracies of models on "Renal and urinary disorders". Numbers reported are means and standard deviations. Each model is evaluated 20 times with different support sets to compute means and standard deviations. Model with highest mean in each row is highlighted.}
+    \label{tab:sider-rud}
+\end{table}
+\begin{table}[h]
+    \centering
+    \begin{tabular}{ |c|c|c|c|c|c| } 
+    \hline
+    P.P.P.C & RF (100 trees) & Graph Conv & Siamese & AttnLSTM & IterRefLSTM \\ 
+    \hline
+    10+/10- & $0.515 \pm 0.034$ & $0.552 \pm 0.028$ & $0.694 \pm 0.012$ & $0.702 \pm 0.006$ & $\mathbf{0.770 \pm 0.006}$ \\
+    \hline
+    5+/10- & $0.517 \pm 0.050$ & $0.548 \pm 0.032$ & $0.645 \pm 0.073$ & $0.686 \pm 0.042$ & $\mathbf{0.747 \pm 0.006}$ \\ 
+    \hline
+    1+/10- & $0.529 \pm 0.043$ & $0.521 \pm 0.041$ & $0.541 \pm 0.038$ & $0.551 \pm 0.055$ & $\mathbf{0.583 \pm 0.009}$ \\ 
+    \hline
+    1+/5- & $0.507 \pm 0.044$ & $0.538 \pm 0.030$ & $0.511 \pm 0.032$ & $0.514 \pm 0.031$ & $\mathbf{0.614 \pm 0.031}$ \\ 
+    \hline
+    1+/1- & $0.504 \pm 0.032$ & $0.527 \pm 0.027$ & $0.510 \pm 0.016$ & $0.505 \pm 0.032$ & $\mathbf{0.663 \pm 0.035}$\\ 
+    \hline
+    \end{tabular}
+    \caption{Accuracies of models on ``Pregnancy, puerperium and perinatal conditions''. Numbers reported are means and standard deviations. Each model is evaluated 20 times with different support sets to compute means and standard deviations. Model with highest mean in each row is highlighted.}
+    \label{tab:sider-pppc}
+\end{table}
+\begin{table}[h]
+    \centering
+    \begin{tabular}{ |c|c|c|c|c|c| } 
+    \hline
+    E.L.D & RF (100 trees) & Graph Conv & Siamese & AttnLSTM & IterRefLSTM \\ 
+    \hline
+    10+/10- & $0.527 \pm 0.034$ & $0.533 \pm 0.026$ & $0.676 \pm 0.077$ & $0.652 \pm 0.091$ & $\mathbf{0.741 \pm 0.003}$ \\
+    \hline
+    5+/10- & $0.518 \pm 0.038$ & $0.486 \pm 0.032$ & $0.648 \pm 0.070$ & $0.636 \pm 0.095$ & $\mathbf{0.726 \pm 0.003}$ \\ 
+    \hline
+    1+/10- & $0.524 \pm 0.021$ & $0.456 \pm 0.018$ & $0.547 \pm 0.037$ & $0.525 \pm 0.525$ & $\mathbf{0.578 \pm 0.009}$ \\ 
+    \hline
+    1+/5- & $0.526 \pm  0.031$ & $0.463 \pm 0.027$ & $0.534 \pm 0.064$ & $0.521 \pm 0.051$ & $\mathbf{0.596 \pm 0.017}$ \\ 
+    \hline
+    1+/1- & $0.509 \pm 0.032$ & $0.519 \pm 0.035$ & $0.514 \pm 0.059$ & $0.534 \pm 0.054$ & $\mathbf{0.632 \pm 0.061}$\\ 
+    \hline
+    \end{tabular}
+    \caption{Accuracies of models on ``Ear and labyrinth disorders''. Numbers reported are means and standard deviations. Each model is evaluated 20 times with different support sets to compute means and standard deviations. Model with highest mean in each row is highlighted.}
+    \label{tab:sider-eld}
+\end{table}
+\begin{table}[h]
+    \centering
+    \begin{tabular}{ |c|c|c|c|c|c| } 
+    \hline
+    C.D & RF (100 trees) & Graph Conv & Siamese & AttnLSTM & IterRefLSTM \\ 
+    \hline
+    10+/10- & $0.527 \pm 0.034$ & $0.533 \pm 0.026$ & $0.676 \pm 0.077$ & $0.652 \pm 0.091$ & $\mathbf{0.741 \pm 0.003}$ \\
+    \hline
+    5+/10- & $0.518 \pm 0.038$ & $0.486 \pm 0.032$ & $0.648 \pm 0.070$ & $0.636 \pm 0.095$ & $\mathbf{0.726 \pm 0.003}$ \\ 
+    \hline
+    1+/10- & $0.524 \pm 0.021$ & $0.456 \pm 0.018$ & $0.547 \pm 0.037$ & $0.525 \pm 0.525$ & $\mathbf{0.578 \pm 0.009}$ \\ 
+    \hline
+    1+/5- & $0.526 \pm  0.031$ & $0.463 \pm 0.027$ & $0.534 \pm 0.064$ & $0.521 \pm 0.051$ & $\mathbf{0.596 \pm 0.017}$ \\ 
+    \hline
+    1+/1- & $0.509 \pm 0.032$ & $0.519 \pm 0.035$ & $0.514 \pm 0.059$ & $0.534 \pm 0.054$ & $\mathbf{0.632 \pm 0.061}$\\ 
+    \hline
+    \end{tabular}
+    \caption{Accuracies of models on ``Cardiac disorders''. Numbers reported are means and standard deviations. Each model is evaluated 20 times with different support sets to compute means and standard deviations. Model with highest mean in each row is highlighted.}
+    \label{tab:sider-cd}
+\end{table}
 
+
+\subsection{MUV Details}
+\subsubsection{Assay Details}
+Assays MUV-466, MUV-548, MUV-600, MUV-644, MUV-652, MUV-689, MUV-692, MUV-712, MUV-713, MUV-733, MUV-737, MUV-810 were used for training. Assays MUV-832, MUV-846, MUV-852,  MUV-858, MUV-859 were used for model evaluation.
+\subsubsection{Per-Assay Results}
+Results for each held-out assay in MUV collection are reported in Tables ~\ref{tab:muv-832}, ~\ref{tab:muv-846}, ~\ref{tab:muv-852}, ~\ref{tab:muv-858}, ~\ref{tab:muv-859}.
+\begin{table}[h]
+    \centering
+    \begin{tabular}{ |c|c|c|c|c|c| } 
+    \hline
+    MUV-832 & RF (100 trees) & Graph Conv & Siamese & AttnLSTM & IterRefLSTM \\ 
+    \hline
+    10+/10- & $\mathbf{0.805 \pm 0.0547}$ & $0.568 \pm 0.0851$ & $0.655 \pm 0.066$ & $0.676 \pm 0.105$ & $0.706 \pm 0.046$ \\
+    \hline
+    5+/10- & $\mathbf{0.730 \pm 0.063}$ & $0.565 \pm 0.068$ & $0.656 \pm 0.136$ & $0.711 \pm 0.116$ & $0.682 \pm 0.023$ \\ 
+    \hline
+    1+/10- & $0.556 \pm 0.084$ & $0.569 \pm 0.061$ & $0.610 \pm 0.144$ & $\mathbf{0.699 \pm 0.053}$ & $0.640 \pm 0.124$ \\ 
+    \hline
+    1+/5- & $\mathbf{0.598 \pm 0.067}$ & $0.573 \pm 0.082$ & $0.511 \pm 0.179$ & $\mathbf{0.594 \pm 0.161}$ & $0.555 \pm 0.184$ \\ 
+    \hline
+    1+/1- & $\mathbf{0.559 \pm 0.095}$ & $\mathbf{0.552 \pm 0.084}$ & $0.500 \pm 0.001$ & $0.496 \pm 0.023$ & $0.481 \pm 0.025$\\ 
+    \hline
+    \end{tabular}
+    \caption{Accuracies of models on MUV-832. Numbers reported are means and standard deviations. Each model is evaluated 20 times with different support sets to compute means and standard deviations. Model with highest mean in each row is highlighted.}
+    \label{tab:muv-832}
+\end{table}
+\begin{table}[h]
+    \centering
+    \begin{tabular}{ |c|c|c|c|c|c| } 
+    \hline
+    MUV-846 & RF (100 trees) & Graph Conv & Siamese & AttnLSTM & IterRefLSTM \\ 
+    \hline
+    10+/10- & $\mathbf{0.820 \pm 0.051}$ & $0.608 \pm 0.079$ & $0.601 \pm 0.041$ & $0.619 \pm 0.095$ & $0.693 \pm 0.028$ \\
+    \hline
+    5+/10- & $\mathbf{0.788 \pm 0.061}$ & $0.595 \pm 0.063$ & $0.655 \pm 0.166$ & $0.641 \pm 0.116$ & $0.721 \pm 0.019$ \\ 
+    \hline
+    1+/10- & $\mathbf{0.700 \pm 0.094}$ & $0.576 \pm 0.075$ & $0.602 \pm 0.118$ & $0.572 \pm 0.185$ & $0.684 \pm 0.071$ \\ 
+    \hline
+    1+/5- & $0.698 \pm 0.106$ & $0.554 \pm 0.089$ & $ 0.562 \pm 0.149$ & $0.553 \pm 0.193$ & $\mathbf{0.710 \pm 0.080}$ \\ 
+    \hline
+    1+/1- & $\mathbf{0.646 \pm 0.080}$ & $0.588 \pm 0.077$ & $0.500 \pm 0.0001$ & $0.514 \pm 0.035$ & $0.528 \pm 0.036$\\ 
+    \hline
+    \end{tabular}
+    \caption{Accuracies of models on MUV-846. Numbers reported are means and standard deviations. Each model is evaluated 20 times with different support sets to compute means and standard deviations. Model with highest mean in each row is highlighted.}
+    \label{tab:muv-846}
+\end{table}
+\begin{table}[h]
+    \centering
+    \begin{tabular}{ |c|c|c|c|c|c| } 
+    \hline
+    MUV-852 & RF (100 trees) & Graph Conv & Siamese & AttnLSTM & IterRefLSTM \\ 
+    \hline
+    10+/10- & $\mathbf{0.754 \pm 0.064}$ & $0.657 \pm 0.103$ & $0.678 \pm 0.047$ & $0.722 \pm 0.105$ & $0.738 \pm 0.030$ \\
+    \hline
+    5+/10- & $\mathbf{0.775 \pm 0.047}$ & $0.670 \pm 0.068$ & $0.765 \pm 0.017$ & $0.753 \pm 0.027$ & $0.702 \pm 0.020$ \\ 
+    \hline
+    1+/10- & $0.631 \pm 0.105$ & $0.627 \pm 0.156$ & $\mathbf{0.737 \pm 0.097}$ & $0.716 \pm 0.175$ & $\mathbf{0.733 \pm 0.036}$ \\ 
+    \hline
+    1+/5- & $0.632 \pm 0.106$ & $0.597 \pm 0.135$ & $0.663 \pm 0.109$ & $0.622 \pm 0.181$ & $\mathbf{0.730 \pm 0.072}$ \\ 
+    \hline
+    1+/1- & $0.590 \pm 0.134$ & $\mathbf{0.614 \pm 0.133}$ & $0.500 \pm 0.002$ & $0.510 \pm 0.029$ & $0.477 \pm 0.027$ \\ 
+    \hline
+    \end{tabular}
+    \caption{Accuracies of models on MUV-852. Numbers reported are means and standard deviations. Each model is evaluated 20 times with different support sets to compute means and standard deviations. Model with highest mean in each row is highlighted.}
+    \label{tab:muv-852}
+\end{table}
+\begin{table}[h]
+    \centering
+    \begin{tabular}{ |c|c|c|c|c|c| } 
+    \hline
+    MUV-858 & RF (100 trees) & Graph Conv & Siamese & AttnLSTM & IterRefLSTM \\ 
+    \hline
+    10+/10- & $0.565 \pm 0.073$ & $0.552 \pm 0.083$ & $0.550 \pm 0.143$ & $0.569 \pm 0.085$ & $\mathbf{0.638 \pm 0.0279}$ \\
+    \hline
+    5+/10- & $0.564 \pm 0.072$ & $0.554 \pm 0.069$ & $0.580 \pm 0.105$ & $0.597 \pm 0.114$ & $\mathbf{0.626 \pm 0.058}$ \\ 
+    \hline
+    1+/10- & $0.537 \pm 0.089$ & $0.552 \pm 0.069$ & $0.553 \pm 0.101$ & $0.542 \pm 0.121$ & $\mathbf{0.573 \pm 0.078}$ \\ 
+    \hline
+    1+/5- & $0.577 \pm 0.068$ & $0.526 \pm 0.050$ & $0.486 \pm 0.082$ & $0.517 \pm 0.128$ & $\mathbf{0.623 \pm 0.079}$ \\ 
+    \hline
+    1+/1- & $\mathbf{0.526 \pm 0.070}$ & $\mathbf{0.527 \pm 0.060}$ & $0.500 \pm 0.009$ & $0.497 \pm 0.035$ & $0.519 \pm 0.033$ \\ 
+    \hline
+    \end{tabular}
+    \caption{Accuracies of models on MUV-858. Numbers reported are means and standard deviations. Each model is evaluated 20 times with different support sets to compute means and standard deviations. Model with highest mean in each row is highlighted.}
+    \label{tab:muv-858}
+\end{table}
+
+\begin{table}[h]
+    \centering
+    \begin{tabular}{ |c|c|c|c|c|c| } 
+    \hline
+    MUV-859 & RF (100 trees) & Graph Conv & Siamese & AttnLSTM & IterRefLSTM \\ 
+    \hline
+    10+/10- & $0.503 \pm 0.0717$ & $0.534 \pm 0.084$ & $0.514 \pm 0.054$ & $0.519 \pm 0.067$ & $0.488 \pm 0.043$ \\
+    \hline
+    5+/10- & $0.502 \pm 0.068$ & $0.510 \pm 0.067$ & $0.498 \pm 0.051$ & $0.519 \pm 0.038$ & $0.449 \pm 0.034$ \\ 
+    \hline
+    1+/10- & $0.530 \pm 0.053$ & $0.511 \pm 0.049$ & $0.507 \pm 0.062$ & $0.523 \pm 0.050$ & $0.478 \pm  0.020$ \\ 
+    \hline
+    1+/5- & $0.515 \pm 0.074$ & $0.513 \pm 0.042$ & $0.514 \pm 0.053$ & $0.500 \pm 0.033$ & $0.474 \pm 0.034$ \\ 
+    \hline
+    1+/1- & $0.521 \pm 0.060$ & $0.493 \pm 0.065$ & $0.500 \pm 0.001$ & $0.505 \pm 0.0357$ & $0.465 \pm 0.020$ \\ 
+    \hline
+    \end{tabular}
+    \caption{Accuracies of models on MUV-859. Numbers reported are means and standard deviations. Each model is evaluated 20 times with different support sets to compute means and standard deviations. No models had signal so did not highlight any models.}
+    \label{tab:muv-859}
+\end{table}
 
 \bibliography{paper.bib}
 
